tests/neg/i9958.scala
val x = summon[[X] =>> (X, X)] // error
