tests/neg/i9958.check
-- Error: tests/neg/i9958.scala:1:30 -----------------------------------------------------------------------------------
1 |val x = summon[[X] =>> (X, X)] // error
  |                              ^
  |      no implicit argument of type [X] =>> (X, X) was found for parameter x of method summon in object DottyPredef
